2001-07-06  Joshua Sled  <jsled@asynchronous.org>

	* src/gnome/gnc-schedxaction-xml-v2.c: Support for new
	SchedXaction options [create/remind-days-in-advance; auto-create,
	notify-on-creation].
	
	* src/gnome/dialog-scheduledxaction.c (putSchedXactionInClist):
	Fix for next-occurance processing.

	* src/engine/SchedXaction.c (xaccSchedXactionGetNextInstance):
	Better handling of start date/last-occur date/current dates when
	generating the next occurance date.  Gotta remember to clear those
	g_dates, lest the come up 'valid' due to stack trash... :(

	* src/gnome/gnc-sxlastrun.{h,c}: Added; newer/better
	since-last-occur dialog.

	* src/gnome/window-main.c: Added Scheduled Transaction stuff to
	"Tools" menu.

	* src/scm/prefs.scm: Added initial cut at Scheduled Transaction
	preferences.

2001-07-06  Robert Graham Merkel  <rgmerk@mira.net>

	* doc/sgml/C/xacc-balancreport.sgml: minor updates

	* doc/sgml/C/image/regwin*.png, appr-income.png, bal-graph.png,
	  report-hierachical.png: no longer used, so removed.

	* doc/sgml/C/image/*tax*.png: resaved as compressed png.

	* doc/sgml/C/image/report-folio.png: reshot for 1.6.

	* doc/sgml/C/image/Makefile.am: updated for removed files.

2001-07-05  Dave Peticolas  <dave@krondo.com>

	* src/engine/Query.c (xaccQueryEqual): new func.

	* doc/sgml/C/xacc-common-report-options.sgml: fix my fix

	* doc/sgml/C/xacc-price-sources.sgml: fix warnings

	* src/guile/gnc.gwp: wrap new func

	* src/gnome/druid-stock-split.c: use new func

	* src/gnome/window-register.c: use new func

	* src/gnome/window-reconcile.c: use new func

	* src/gnome/reconcile-list.c: use new func

	* src/gnc-ui-util.c (gnc_account_print_info): new func. this
	replaces 'quantity' and 'value' print info for the currency-
	in-transaction switch. Delete the 'quantity' version.

2001-07-04  Dave Peticolas  <dave@krondo.com>

	* AUTHORS: credits

	* doc/sgml/C/xacc-about.sgml: credits

	* src/scm/report/transaction.scm: Michael T. Garrison Stuber's